--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 744633c
+	base = fef0c42
 	trimbase = 
 	parent = rpm/indigo/razor_imu_9dof
-	previous = 
+	previous = 744633c
